--- a/lesson_9.html
+++ b/lesson_9.html
@@ -717,7 +717,7 @@
           </div>
         </div>
         <h1 class="quiz-title">🎯 Lesson 9 Quiz</h1>
-        <p class="quiz-subtitle">Advanced List Concepts & Tuples</p>
+        <p class="quiz-subtitle">List and its operations</p>
       </div>
 
       <div class="timer-section">
@@ -733,202 +733,219 @@
 
       <div class="content">
         <form id="quizForm">
-          <!-- Question 1 (VERY EASY – tuple creation) -->
+          <!-- Question 1 (EASY – indexing + negative index) -->
           <div class="question-block">
             <div class="question-number">1</div>
-            <div class="question-text">
-              🧩 What is the type of <code>t</code>?
-            </div>
-            <div class="code-box">
-              <pre>
-t = (10,)
-print(type(t))
-</pre
-              >
-            </div>
-            <div class="options">
-              <div class="option">
-                <input type="radio" name="q1" value="A" />
-                <label>&lt;class 'int'&gt;</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q1" value="B" />
-                <label>&lt;class 'list'&gt;</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q1" value="C" />
-                <label>&lt;class 'tuple'&gt;</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q1" value="D" />
-                <label>Error</label>
-              </div>
-            </div>
-          </div>
-
-          <!-- Question 2 (EASY – nested list + tuple indexing) -->
-          <div class="question-block">
-            <div class="question-number">2</div>
             <div class="question-text">📋 What will this code print?</div>
             <div class="code-box">
               <pre>
-data = [1, (2, 3), 4]
-print(data[1][0])
+a = [10, 20, 30, 40]
+print(a[1], a[-1])
 </pre
               >
             </div>
             <div class="options">
               <div class="option">
-                <input type="radio" name="q2" value="A" />
-                <label>1</label>
+                <input type="radio" name="q1" value="A" /><label>10 40</label>
               </div>
               <div class="option">
-                <input type="radio" name="q2" value="B" />
-                <label>2</label>
+                <input type="radio" name="q1" value="B" /><label>20 30</label>
               </div>
               <div class="option">
-                <input type="radio" name="q2" value="C" />
-                <label>(2, 3)</label>
+                <input type="radio" name="q1" value="C" /><label>20 40</label>
               </div>
               <div class="option">
-                <input type="radio" name="q2" value="D" />
-                <label>Error</label>
+                <input type="radio" name="q1" value="D" /><label>Error</label>
               </div>
             </div>
           </div>
 
-          <!-- Question 3 (MEDIUM – slicing + built-ins combined) -->
+          <!-- Question 2 (EASY – slicing) -->
           <div class="question-block">
-            <div class="question-number">3</div>
-            <div class="question-text">🧠 What will be the output?</div>
+            <div class="question-number">2</div>
+            <div class="question-text">✂️ What will be the output?</div>
             <div class="code-box">
               <pre>
-t = (5, 10, 15, 20)
-x = t[1:3]
-print(len(x) + sum(x))
+nums = [1, 2, 3, 4, 5]
+x = nums[:3]
+print(x)
 </pre
               >
             </div>
             <div class="options">
               <div class="option">
-                <input type="radio" name="q3" value="A" />
-                <label>25</label>
+                <input type="radio" name="q2" value="A" /><label>[1, 2]</label>
               </div>
               <div class="option">
-                <input type="radio" name="q3" value="B" />
-                <label>30</label>
+                <input type="radio" name="q2" value="B" /><label
+                  >[1, 2, 3]</label
+                >
               </div>
               <div class="option">
-                <input type="radio" name="q3" value="C" />
-                <label>27</label>
+                <input type="radio" name="q2" value="C" /><label
+                  >[2, 3, 4]</label
+                >
               </div>
               <div class="option">
-                <input type="radio" name="q3" value="D" />
-                <label>Error</label>
+                <input type="radio" name="q2" value="D" /><label>Error</label>
               </div>
             </div>
           </div>
 
-          <!-- Question 4 (MEDIUM – tuple immutability vs mutable element) -->
+          <!-- Question 3 (MEDIUM – slice vs original list) -->
+          <div class="question-block">
+            <div class="question-number">3</div>
+            <div class="question-text">🧠 What will be printed?</div>
+            <div class="code-box">
+              <pre>
+a = [5, 10, 15, 20]
+b = a[1:3]
+b[0] = 99
+
+print(a, b)
+</pre
+              >
+            </div>
+            <div class="options">
+              <div class="option">
+                <input type="radio" name="q3" value="A" /><label
+                  >[5, 99, 15, 20] [99, 15]</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q3" value="B" /><label
+                  >[5, 10, 15, 20] [99, 15]</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q3" value="C" /><label
+                  >[5, 10, 99, 20] [99, 15]</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q3" value="D" /><label>Error</label>
+              </div>
+            </div>
+          </div>
+
+          <!-- Question 4 (HARD – copy vs reference) -->
           <div class="question-block">
             <div class="question-number">4</div>
             <div class="question-text">⚠️ What will be printed?</div>
             <div class="code-box">
               <pre>
-data = ([1, 2], (3, 4))
-data[0][1] = 99
-print(data)
+x = [1, 2, 3]
+y = x
+z = x.copy()
+
+y.append(4)
+z.append(9)
+
+print(x, y, z)
 </pre
               >
             </div>
             <div class="options">
               <div class="option">
-                <input type="radio" name="q4" value="A" />
-                <label>([1, 99], (3, 4))</label>
+                <input type="radio" name="q4" value="A" /><label
+                  >[1, 2, 3, 4] [1, 2, 3, 4] [1, 2, 3, 9]</label
+                >
               </div>
               <div class="option">
-                <input type="radio" name="q4" value="B" />
-                <label>([1, 2], (3, 99))</label>
+                <input type="radio" name="q4" value="B" /><label
+                  >[1, 2, 3] [1, 2, 3, 4] [1, 2, 3, 9]</label
+                >
               </div>
               <div class="option">
-                <input type="radio" name="q4" value="C" />
-                <label>Error: tuple is immutable</label>
+                <input type="radio" name="q4" value="C" /><label
+                  >[1, 2, 3, 9] [1, 2, 3, 4] [1, 2, 3, 9]</label
+                >
               </div>
               <div class="option">
-                <input type="radio" name="q4" value="D" />
-                <label>Error</label>
+                <input type="radio" name="q4" value="D" /><label>Error</label>
               </div>
             </div>
           </div>
 
-          <!-- Question 5 (HARD – slicing + sorted + return type trap) -->
-          <div class="question-block">
-            <div class="question-number">5</div>
-            <div class="question-text">🔍 What will this code print?</div>
-            <div class="code-box">
-              <pre>
-t = (4, 1, 3, 2)
-x = sorted(t[1:3])
-print(type(x), x)
-</pre
-              >
-            </div>
-            <div class="options">
-              <div class="option">
-                <input type="radio" name="q5" value="A" />
-                <label>&lt;class 'tuple'&gt; (1, 3)</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q5" value="B" />
-                <label>&lt;class 'list'&gt; [1, 3]</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q5" value="C" />
-                <label>&lt;class 'tuple'&gt; [1, 3]</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q5" value="D" />
-                <label>Error</label>
-              </div>
-            </div>
-          </div>
-
-         <!-- Question 6 (HARD & TRICKY – tuple concatenation + repetition + built-in methods) -->
+         <!-- Question 5 (HARD – pop + count only) -->
 <div class="question-block">
-  <div class="question-number">6</div>
-  <div class="question-text">🔥 What will be the output?</div>
-
+  <div class="question-number">5</div>
+  <div class="question-text">🔢 What will this print?</div>
   <div class="code-box">
     <pre>
-t = (1, 2)
-t += (3,)
+a = [1, 2, 3, 2]
+b = [2, 3]
 
-t = t * 2
-t += (4, 5)
+a.pop()
+b.pop()
 
-print(len(t), t.count(2), t.index(4))
+x = a.count(2) + b.count(2)
+
+print(a, x)
+</pre>
+  </div>
+
+  <div class="options">
+    <div class="option">
+      <input type="radio" name="q5" value="A" />
+      <label>[1, 2, 3] 2</label>
+    </div>
+
+    <div class="option">
+      <input type="radio" name="q5" value="B" />
+      <label>[1, 2, 3] 1</label>
+    </div>
+
+    <div class="option">
+      <input type="radio" name="q5" value="C" />
+      <label>[1, 2, 3, 2] 2</label>
+    </div>
+
+    <div class="option">
+      <input type="radio" name="q5" value="D" />
+      <label>Error</label>
+    </div>
+  </div>
+</div>
+
+
+          <!-- Question 6 (Medium – list join) -->
+<div class="question-block">
+  <div class="question-number">6</div>
+  <div class="question-text">
+    🤔 What will be the output?
+  </div>
+  <div class="code-box">
+    <pre>
+a = [10, 20]
+b = [30, 40]
+
+c = a + b
+a.append(50)
+
+print(a, c)
 </pre>
   </div>
 
   <div class="options">
     <div class="option">
       <input type="radio" name="q6" value="A" />
-      <label>8 2 6</label>
+      <label>[10, 20, 50] [10, 20, 30, 40]</label>
     </div>
 
     <div class="option">
       <input type="radio" name="q6" value="B" />
-      <label>10 2 6</label>
+      <label>[10, 20] [10, 20, 30, 40, 50]</label>
     </div>
 
     <div class="option">
       <input type="radio" name="q6" value="C" />
-      <label>10 1 6</label>
+      <label>[10, 20, 30, 40, 50] [10, 20, 30, 40]</label>
     </div>
 
     <div class="option">
       <input type="radio" name="q6" value="D" />
-      <label>8 2 7</label>
+      <label>Error</label>
     </div>
   </div>
 </div>
@@ -949,11 +966,11 @@ print(len(t), t.count(2), t.index(4))
 
     <script>
       const correctAnswers = {
-        q1: "C", // <class 'tuple'>
-        q2: "B", // 2
-        q3: "C", // len(10,15)=2 + sum(25) = 27
-        q4: "A", // tuple contains mutable list
-        q5: "B", // sorted() returns list
+        q1: "C", // 20 40
+        q2: "B", // [1, 2, 3]
+        q3: "B", // slice creates new list
+        q4: "A", // y shares reference, z is copy
+        q5: "B", 
         q6: "A", 
       };
 
