--- a/lesson_12.html
+++ b/lesson_12.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STEMxLearning - Lesson 9 Quiz</title>
+    <title>STEMxLearning - Lesson 12 Quiz</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Poppins:wght@400;600;700&display=swap");
 
@@ -716,8 +716,8 @@
             ><span class="brand-learning">Learning</span>
           </div>
         </div>
-        <h1 class="quiz-title">🎯 Lesson 9 Quiz</h1>
-        <p class="quiz-subtitle">List and its operations</p>
+        <h1 class="quiz-title">🎯 Lesson 12 Quiz</h1>
+        <p class="quiz-subtitle">Loops</p>
       </div>
 
       <div class="timer-section">
@@ -733,222 +733,199 @@
 
       <div class="content">
         <form id="quizForm">
-          <!-- Question 1 (EASY – indexing + negative index) -->
-          <div class="question-block">
-            <div class="question-number">1</div>
-            <div class="question-text">📋 What will this code print?</div>
-            <div class="code-box">
-              <pre>
-a = [10, 20, 30, 40]
-print(a[1], a[-1])
-</pre
-              >
-            </div>
-            <div class="options">
-              <div class="option">
-                <input type="radio" name="q1" value="A" /><label>10 40</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q1" value="B" /><label>20 30</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q1" value="C" /><label>20 40</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q1" value="D" /><label>Error</label>
-              </div>
-            </div>
-          </div>
+          <!-- Question 1 (EASY – while loop basic) -->
+<div class="question-block">
+  <div class="question-number">1</div>
+  <div class="question-text">🟢 What will be printed?</div>
+  <div class="code-box">
+    <pre>
+i = 0
+while i < 3:
+    print(i)
+    i += 1
+    </pre>
+  </div>
+  <div class="options">
+    <div class="option">
+      <input type="radio" name="q1" value="A">
+      <label>0<br>1</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q1" value="B">
+      <label>0<br>1<br>2</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q1" value="C">
+      <label>1<br>2<br>3</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q1" value="D">
+      <label>Infinite loop</label>
+    </div>
+  </div>
+</div>
 
-          <!-- Question 2 (EASY – slicing) -->
-          <div class="question-block">
-            <div class="question-number">2</div>
-            <div class="question-text">✂️ What will be the output?</div>
-            <div class="code-box">
-              <pre>
-nums = [1, 2, 3, 4, 5]
-x = nums[:3]
-print(x)
-</pre
-              >
-            </div>
-            <div class="options">
-              <div class="option">
-                <input type="radio" name="q2" value="A" /><label>[1, 2]</label>
-              </div>
-              <div class="option">
-                <input type="radio" name="q2" value="B" /><label
-                  >[1, 2, 3]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q2" value="C" /><label
-                  >[2, 3, 4]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q2" value="D" /><label>Error</label>
-              </div>
-            </div>
-          </div>
 
-          <!-- Question 3 (MEDIUM – slice vs original list) -->
-          <div class="question-block">
-            <div class="question-number">3</div>
-            <div class="question-text">🧠 What will be printed?</div>
-            <div class="code-box">
-              <pre>
-a = [5, 10, 15, 20]
-b = a[1:3]
-b[0] = 99
+<!-- Question 2 (EASY–MEDIUM – for loop with range) -->
+<div class="question-block">
+  <div class="question-number">2</div>
+  <div class="question-text">🟡 What will be printed?</div>
+  <div class="code-box">
+    <pre>
+for i in range(2, 7):
+    print(i)
+    </pre>
+  </div>
+  <div class="options">
+    <div class="option">
+      <input type="radio" name="q2" value="A">
+      <label>2<br>3<br>4<br>5<br>6</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q2" value="B">
+      <label>2<br>3<br>4<br>5<br>6<br>7</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q2" value="C">
+      <label>3<br>4<br>5<br>6</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q2" value="D">
+      <label>Error</label>
+    </div>
+  </div>
+</div>
 
-print(a, b)
-</pre
-              >
-            </div>
-            <div class="options">
-              <div class="option">
-                <input type="radio" name="q3" value="A" /><label
-                  >[5, 99, 15, 20] [99, 15]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q3" value="B" /><label
-                  >[5, 10, 15, 20] [99, 15]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q3" value="C" /><label
-                  >[5, 10, 99, 20] [99, 15]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q3" value="D" /><label>Error</label>
-              </div>
-            </div>
-          </div>
 
-          <!-- Question 4 (HARD – copy vs reference) -->
-          <div class="question-block">
-            <div class="question-number">4</div>
-            <div class="question-text">⚠️ What will be printed?</div>
-            <div class="code-box">
-              <pre>
-x = [1, 2, 3]
-y = x
-z = x.copy()
+<!-- Question 3 (MEDIUM – string iteration with condition) -->
+<div class="question-block">
+  <div class="question-number">3</div>
+  <div class="question-text">🟡 What will be printed?</div>
+  <div class="code-box">
+    <pre>
+word = "loop"
 
-y.append(4)
-z.append(9)
+for ch in word:
+    if ch == "o":
+        print(ch)
+    </pre>
+  </div>
+  <div class="options">
+    <div class="option">
+      <input type="radio" name="q3" value="A">
+      <label>l<br>o<br>o<br>p</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q3" value="B">
+      <label>o</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q3" value="C">
+      <label>o<br>o</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q3" value="D">
+      <label>No output</label>
+    </div>
+  </div>
+</div>
 
-print(x, y, z)
-</pre
-              >
-            </div>
-            <div class="options">
-              <div class="option">
-                <input type="radio" name="q4" value="A" /><label
-                  >[1, 2, 3, 4] [1, 2, 3, 4] [1, 2, 3, 9]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q4" value="B" /><label
-                  >[1, 2, 3] [1, 2, 3, 4] [1, 2, 3, 9]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q4" value="C" /><label
-                  >[1, 2, 3, 9] [1, 2, 3, 4] [1, 2, 3, 9]</label
-                >
-              </div>
-              <div class="option">
-                <input type="radio" name="q4" value="D" /><label>Error</label>
-              </div>
-            </div>
-          </div>
 
-         <!-- Question 5 (HARD – pop + count only) -->
+<!-- Question 4 (MEDIUM–HARD – while loop logic) -->
+<div class="question-block">
+  <div class="question-number">4</div>
+  <div class="question-text">🟠 What will be printed?</div>
+  <div class="code-box">
+    <pre>
+x = 5
+
+while x > 2:
+    print(x)
+    x = x - 2
+    </pre>
+  </div>
+  <div class="options">
+    <div class="option">
+      <input type="radio" name="q4" value="A">
+      <label>5<br>4<br>3<br>2</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q4" value="B">
+      <label>5<br>3</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q4" value="C">
+      <label>5<br>3<br>1</label>
+    </div>
+    <div class="option">
+      <input type="radio" name="q4" value="D">
+      <label>Infinite loop</label>
+    </div>
+  </div>
+</div>
+
+
+<!-- Question 5 (HARD – for loop with range step) -->
 <div class="question-block">
   <div class="question-number">5</div>
-  <div class="question-text">🔢 What will this print?</div>
+  <div class="question-text">🔴 What will be printed?</div>
   <div class="code-box">
     <pre>
-a = [1, 2, 3, 2]
-b = [2, 3]
-
-a.pop()
-b.pop()
-
-x = a.count(2) + b.count(2)
-
-print(a, x)
-</pre>
+for i in range(10, 3, -3):
+    print(i)
+    </pre>
   </div>
-
   <div class="options">
     <div class="option">
-      <input type="radio" name="q5" value="A" />
-      <label>[1, 2, 3] 2</label>
+      <input type="radio" name="q5" value="A">
+      <label>10<br>7<br>4</label>
     </div>
-
     <div class="option">
-      <input type="radio" name="q5" value="B" />
-      <label>[1, 2, 3] 1</label>
+      <input type="radio" name="q5" value="B">
+      <label>10<br>8<br>6<br>4</label>
     </div>
-
     <div class="option">
-      <input type="radio" name="q5" value="C" />
-      <label>[1, 2, 3, 2] 2</label>
+      <input type="radio" name="q5" value="C">
+      <label>7<br>4</label>
     </div>
-
     <div class="option">
-      <input type="radio" name="q5" value="D" />
+      <input type="radio" name="q5" value="D">
       <label>Error</label>
     </div>
   </div>
 </div>
-
-
-          <!-- Question 6 (Medium – list join) -->
+<!-- Question 6 (HARD – Infinite Loop) -->
 <div class="question-block">
   <div class="question-number">6</div>
-  <div class="question-text">
-    🤔 What will be the output?
-  </div>
+  <div class="question-text">🔥 What will be the result?</div>
   <div class="code-box">
     <pre>
-a = [10, 20]
-b = [30, 40]
-
-c = a + b
-a.append(50)
-
-print(a, c)
-</pre>
+i = 1
+while i >= 1:
+    print(i)
+    i += 1
+    </pre>
   </div>
-
   <div class="options">
     <div class="option">
-      <input type="radio" name="q6" value="A" />
-      <label>[10, 20, 50] [10, 20, 30, 40]</label>
+      <input type="radio" name="q6" value="A">
+      <label>1</label>
     </div>
-
     <div class="option">
-      <input type="radio" name="q6" value="B" />
-      <label>[10, 20] [10, 20, 30, 40, 50]</label>
+      <input type="radio" name="q6" value="B">
+      <label>Numbers are printed and then stop</label>
     </div>
-
     <div class="option">
-      <input type="radio" name="q6" value="C" />
-      <label>[10, 20, 30, 40, 50] [10, 20, 30, 40]</label>
+      <input type="radio" name="q6" value="C">
+      <label>Infinite loop</label>
     </div>
-
     <div class="option">
-      <input type="radio" name="q6" value="D" />
+      <input type="radio" name="q6" value="D">
       <label>Error</label>
     </div>
   </div>
 </div>
+
 
           <button type="submit" class="submit-btn" id="submitBtn">
             <span>🎉 Submit My Answers! 🎉</span>
@@ -965,14 +942,15 @@ print(a, c)
     </div>
 
     <script>
-      const correctAnswers = {
-        q1: "C", // 20 40
-        q2: "B", // [1, 2, 3]
-        q3: "B", // slice creates new list
-        q4: "A", // y shares reference, z is copy
-        q5: "A", 
-        q6: "A", 
-      };
+    const correctAnswers = {
+  q1: "B", // 0 1 2
+  q2: "A", // 2 3 4 5 6
+  q3: "C", // o o
+  q4: "B", // 5 3
+  q5: "A", // 10 7 4
+  q6: "C", // Infinite loop
+};
+
 
       const QUIZ_DURATION = 180;
       let timeRemaining = QUIZ_DURATION;
