--- a/lesson_12.html
+++ b/lesson_12.html
@@ -869,31 +869,53 @@ while x > 2:
 <div class="question-block">
   <div class="question-number">5</div>
   <div class="question-text">🔴 What will be printed?</div>
+
   <div class="code-box">
     <pre>
-for i in range(10, 3, -3):
+for i in range(10, 15, 2):
     print(i)
     </pre>
   </div>
+
   <div class="options">
     <div class="option">
       <input type="radio" name="q5" value="A">
-      <label>10<br>7<br>4</label>
+      <label>
+        10<br>
+        12<br>
+        14
+      </label>
     </div>
+
     <div class="option">
       <input type="radio" name="q5" value="B">
-      <label>10<br>8<br>6<br>4</label>
+      <label>
+        10<br>
+        11<br>
+        12<br>
+        13<br>
+        14
+      </label>
     </div>
+
     <div class="option">
       <input type="radio" name="q5" value="C">
-      <label>7<br>4</label>
+      <label>
+        15<br>
+        13<br>
+        11
+      </label>
     </div>
+
     <div class="option">
       <input type="radio" name="q5" value="D">
-      <label>Error</label>
+      <label>
+        Error
+      </label>
     </div>
   </div>
 </div>
+
 <!-- Question 6 (HARD – Infinite Loop) -->
 <div class="question-block">
   <div class="question-number">6</div>
