Added quiz questions

--- a/lesson_13.html
+++ b/lesson_13.html
@@ -761,31 +761,30 @@
   </div>
 </div>
 
-
-<!-- Question 2 (EASY – Theory – continue in nested loop) -->
+<!-- Question 2 (EASY – Theory – Nested Loop Execution Count) -->
 <div class="question-block">
   <div class="question-number">2</div>
-  <div class="question-text">🟢 In nested loops, which loop does <code>continue</code> affect?</div>
+  <div class="question-text">🟢 If an outer loop runs 4 times and the inner loop runs 3 times for each outer loop iteration, how many total times will the inner loop execute?</div>
 
   <div class="options">
     <div class="option">
       <input type="radio" name="q2" value="A">
-      <label>Both loops</label>
+      <label>4</label>
     </div>
 
     <div class="option">
       <input type="radio" name="q2" value="B">
-      <label>The outer loop</label>
+      <label>3</label>
     </div>
 
     <div class="option">
       <input type="radio" name="q2" value="C">
-      <label>The innermost loop where it is written</label>
+      <label>7</label>
     </div>
 
     <div class="option">
       <input type="radio" name="q2" value="D">
-      <label>It stops all loops</label>
+      <label>12</label>
     </div>
   </div>
 </div>
@@ -963,7 +962,7 @@ for i in range(3):
     <script>
     const correctAnswers = {
   q1: "B", // Stops the loop completely
-q2: "C", // The innermost loop where it is written
+q2: "D", // The innermost loop where it is written
 q3: "B", // * *  |  * *
 q4: "B", // 0 2  |  0 2  |  0 2
 q5: "B", // * *  |  * *  |  * *
